# doko

./: .gitignore  LICENSE  docker-compose.yaml  dockerfile  justfile  pyproject.toml  readme.md
doko/: __init__.py  _settings.py  db.py  exception.py  http_exception.py  main.py  orm.py  request_dto.py  response_dto.py  router.py  sse.py
doko/game/: __init__.py  card.py  deck.py  hand.py  player.py  rules.py  stack.py
doko/libs/: case_utils.py  functional_utils.py  password_utils.py
doko/libs/cli_game/: main.py
doko/logic/: __init__.py  game.py  game_review.py  group_creation.py  group_selection.py  group_waiting.py  login.py  logout.py  registration.py
doko/statics/: __init__.py
doko/templates/: __init__.py  _shared_error.html  _shared_layout.html
doko/templates/error/: error.html
doko/templates/game/: game.html
doko/templates/game/partials/: hand.html  stack.html
doko/templates/game_review/: game_review.html
doko/templates/game_review/partials/: all_ready.html  players.html  update.html
doko/templates/group/: group.html
doko/templates/group/partials/: groups.html  players.html
doko/templates/group_create/: group_create.html
doko/templates/group_create/partials/: groupname.html  username.html
doko/templates/login/: login.html
doko/templates/registration/: registration.html
doko/templates/registration/partials/: password.html  password_validation.html  success.html  username.html
doko/templates/waiting/: waiting.html
doko/templates/waiting/partials/: all_ready.html  players.html  update.html
